# itgmania-reference-harness

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: crashhandler_stub.hpp  embedded_lua.h.in  itgmania_adapter.cpp  itgmania_adapter.h  itgmania_step_parity.cpp  itgmania_stubs.cpp  lua_compat.hpp  main.cpp  picosha2.h
